# aws-iot-device-sdk-embedded-C

.github/workflows/: doxygen-generation.yml  tag-and-zip.yml
demos/: lexicon.txt
demos/http/http_demo_s3_download_async/: CMakeLists.txt  demo_config.h  http_demo_s3_download_async.c
demos/http/http_demo_s3_download_multithreaded/: demo_config.h  http_demo_s3_download_multithreaded.c
